# intelligent_document_processing

./: .env.example  .gitignore  IDP_Technical_Report.docx  README.md  demo.py  main.py  pyproject.toml  ~$P_Technical_Report.docx
app/: main.py
app/api/: routes.py
app/models/: __init__.py  errors.py  invoice.py  response.py  transport.py
app/pipeline/: graph.py  state.py  timing.py
app/pipeline/nodes/: classify.py  error_node.py  extract.py  extract_transport.py  parse.py  validate.py
tests/: evaluate.py  evaluation_results.json  test_api.py
